adding logs