@@ -1,6 +1,7 @@
 package ru.ulstu.supplier.services;
 
 import lombok.AllArgsConstructor;
+import lombok.extern.log4j.Log4j2;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import ru.ulstu.supplier.feign.ReportsClient;
@@ -13,10 +14,10 @@ import ru.ulstu.supplier.repositories.SupplierRepository;
 
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
+@Log4j2
 public class SupplierServiceImpl implements SupplierService {
     private final SupplierRepository repo;
     private final SupplierMapper mapper;
@@ -24,22 +25,30 @@ public class SupplierServiceImpl implements SupplierService {
 
     @Override
     public SupplierDTO addNew(SupplierDTO supplier) {
-        return mapper.mapToDTO(repo.save(mapper.mapFromDTO(supplier)));
+        SupplierDTO supplierDTO = mapper.mapToDTO(repo.save(mapper.mapFromDTO(supplier)));
+        log.info(String.format("Успешно сохранен заказчик %s", supplierDTO.getId()));
+        return supplierDTO;
     }
 
     @Override
     public List<SupplierDTO> getAll() {
-        return repo.findAll().stream().map(mapper::mapToDTO).collect(Collectors.toList());
+        List<SupplierDTO> list = repo.findAll().stream().map(mapper::mapToDTO).toList();
+        log.info("Получены все заказчики");
+        return list;
     }
 
     @Override
     public List<SupplierCutDTO> getOGRN() {
-        return repo.findAll().stream().map(mapper::mapToDTOCut).collect(Collectors.toList());
+        List<SupplierCutDTO> list = repo.findAll().stream().map(mapper::mapToDTOCut).toList();
+        log.info("Получены ОГРН всех заказчиков");
+        return list;
     }
 
     @Override
     public List<SupplierDTO> getByActive(Boolean isActive) {
-        return repo.findAllByIsActive(isActive).stream().map(mapper::mapToDTO).collect(Collectors.toList());
+        List<SupplierDTO> list = repo.findAllByIsActive(isActive).stream().map(mapper::mapToDTO).toList();
+        log.info(isActive ? "Получены все активные заказчики" : "Получены все заблокированные заказчики");
+        return list;
     }
 
     @Override
@@ -47,13 +56,16 @@ public class SupplierServiceImpl implements SupplierService {
         Supplier supplier = repo.getOne(id);
         supplier.setName(name);
         supplier.setIsActive(isActive);
-        return mapper.mapToDTO(repo.save(supplier));
+        SupplierDTO supplierDTO = mapper.mapToDTO(repo.save(supplier));
+        log.info(String.format("Обновлена запись заказчика с id = %s", id));
+        return supplierDTO;
     }
 
     @Override
     public SupplierDTO delete(Long id) {
         SupplierDTO s = mapper.mapToDTO(repo.getOne(id));
         repo.deleteById(id);
+        log.info(String.format("Удалена запись заказчика с id = %s", id));
         return s;
     }
 
@@ -61,13 +73,17 @@ public class SupplierServiceImpl implements SupplierService {
     @Async
     public CompletableFuture<List<SupplierNumeratedDTO>> getAllReportAsync() {
         List<SupplierNumeratedDTO> data = reportsClient.getAllReport();
-        return CompletableFuture.completedFuture(data);
+        CompletableFuture<List<SupplierNumeratedDTO>> list = CompletableFuture.completedFuture(data);
+        log.info("Асинхронно получены отчеты о всех заказчиках");
+        return list;
     }
 
     @Override
     @Async
     public CompletableFuture<List<SupplierNumeratedDTO>> getByActiveReportAsync(Boolean isActive) {
         List<SupplierNumeratedDTO> data = isActive ? reportsClient.getActiveReport() : reportsClient.getDisabledReport();
-        return CompletableFuture.completedFuture(data);
+        CompletableFuture<List<SupplierNumeratedDTO>> list = CompletableFuture.completedFuture(data);
+        log.info(isActive ? "Асинхронно получены отчеты о всех активных заказчиках" : "Асинхронно получены отчеты о всех заблокированных заказчиках");
+        return list;
     }
 }
